--- a/styles/header.css
+++ b/styles/header.css
@@ -1,9 +1,11 @@
 .header {
   position: absolute;
   top: 0;
-  left: 0;
   width: 100%;
   z-index: 10;
+}
+
+.header__wrapper {
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -11,6 +13,9 @@
 }
 
 .header__menu {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 1.5rem;
   height: 1.5rem;
   flex-shrink: 0;
@@ -37,4 +42,13 @@
   flex-shrink: 0;
   background: linear-gradient(252deg, #76564b 5.21%, #614238 100%);
   box-shadow: 0px 0px 3.296px 0px rgba(0, 0, 0, 0.16);
+}
+
+/* Desktop screens: 1248px - x */
+@media (min-width: 78rem) {
+  .header {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
