--- a/styles/layouts.css
+++ b/styles/layouts.css
@@ -4,7 +4,7 @@
   padding-block: var(--mobile-gap5);
   gap: var(--mobile-gap3);
   border-bottom: 1px solid var(--Basic-Black, #343434);
-  background: var(--Basic-Black, #343434);
+  background-color: var(--Basic-Black, #343434);
 }
 
 .layouts__flats-wrapper {
@@ -25,7 +25,7 @@
 }
 
 .layouts__flat {
-  /* max-width: 10.21875rem; */
+  max-width: 10.21875rem;
   display: flex;
   flex-direction: column;
   padding: 1rem;
