--- a/styles/reset.css
+++ b/styles/reset.css
@@ -12,7 +12,7 @@
 
 body {
   /* 3. Add accessible line-height */
-  line-height: 1.5;
+  line-height: 1.6;
   /* 4. Improve text rendering */
   -webkit-font-smoothing: antialiased;
 }
@@ -89,7 +89,6 @@ button {
 /*
   11. Remove list styles
 */
-
 li {
   list-style: none;
   margin: 0;
